# odyssey-chronicle

./: .gitignore  README.md  event_examples.json  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  webpack.config.ts  webpack.rules.ts
scripts/: backfill-body-counts.js  backfill_bio_scans.py
src/: bio_data.ts  database.ts  index.css  index.html  index.ts  preload.ts  region_map.ts  renderer.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  config.rs  database.rs  lib.rs  main.rs  state.rs  types.rs  watcher.rs
