[package]
name = "odyssey-chronicle"
version = "1.0.0"
edition = "2021"

[lib]
name = "odyssey_chronicle_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri        = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs     = "2"

serde        = { version = "1", features = ["derive"] }
serde_json   = "1"

rusqlite     = { version = "0.31", features = ["bundled"] }

notify       = "6"

tokio        = { version = "1", features = ["full"] }

regex        = "1"
uuid         = { version = "1", features = ["v4"] }
chrono       = { version = "0.4", features = ["serde"] }
log          = "0.4"
env_logger   = "0.11"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
